# macrogrid

./: 404.html  Cargo.toml  README.md  examples.md  index.html  index.md  retype.yml  robots.txt  squares.md
.github/workflows/: antidocsmerge.yml  retype-action.yml  retypeaction.yml  retypepages.yml
examples/: index.html  simple_hexagon.rs  simple_square.rs
hexagons/: flat.md  index.html  index.md  pointy.md
hexagons/flat/: index.html
hexagons/pointy/: index.html
resources/css/: retype.css
resources/js/: config.js  search.json
sample/: index.html
squares/: index.html
src/: Olib.rs  lib.rs
src/cell/: mod.rs
src/grid/: mod.rs
src/grid/cell/: mod.rs
src/grid/position/: mod.rs
src/types/: mod.rs
src/types/hexagon/: mod.rs
src/types/square/: mod.rs
test/: index.html
