[package]
name = "macroquad_grid"
version = "0.1.1"
edition = "2021"
exclude = [
    "examples/*",
]
license = "MIT OR Apache-2.0"
description = "grid to use with macroquad"
homepage = "https://github.com/TheDinner22/macroquad_grid"
repository = "https://github.com/TheDinner22/macroquad_grid"
readme = "README.md"
documentation = "https://docs.rs/macroquad_grid/0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.25"

