[package]
name = "macrogrid"
version = "0.1.2"
edition = "2021"
exclude = [
    "examples/*",
    "src/Olib.rs",
]
license = "MIT OR Apache-2.0"
description = "Simple crate to work with grids in macroquad."
homepage = "https://github.com/azazelcodes/macrogrid"
repository = "https://github.com/azazelcodes/macrogrid"
readme = "README.md"
documentation = "https://docs.rs/macrogrid/0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4.13"

